<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/forgot_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/forgot_bg"
    tools:context="com.example.sugandhkumar.payme.ForgotPassword">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/lbl_forgot_password"
        android:textColor="@android:color/darker_gray"
        android:textSize="20dp"
        android:id="@+id/textView5"
        android:layout_marginBottom="13dp"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:padding="@dimen/activity_horizontal_margin"
        android:text="@string/forgot_password_msg"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="14dp"
        android:layout_above="@+id/bNext"
        android:layout_marginBottom="78dp"
        android:id="@+id/textView7"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/editText6"
        android:layout_above="@+id/bNext"
        android:hint="@string/hint_email"
        android:layout_marginBottom="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bNext"
        android:gravity="bottom"
        android:text="By logging in you agree to the Terms Of Use"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_above="@+id/submit_area"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="13dp" />

    <Button
        android:text="Send Reset Password Link"
        android:state_focused="true"
        android:state_pressed="false"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_area"
        android:background="@color/colorAccent"
        android:layout_above="@+id/btn_back"
        android:layout_marginBottom="30dp"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/progress" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_back"
        android:textColor="@color/colorAccent"
        android:layout_marginBottom="61dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

    <android.support.v4.widget.ContentLoadingProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progress"/>
</RelativeLayout>
