<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_3">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Operator"
            android:id="@+id/dthOperator"
            android:inputType="textPersonName"
            android:textColor="@color/cardview_dark_background"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/smartcard"
            android:hint="Smart Card Number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/amnt"
            android:hint="Amount"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnPayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_12"
        android:layout_marginLeft="@dimen/dimen_30"
        android:layout_marginRight="@dimen/dimen_30"
        android:layout_marginTop="@dimen/dimen_50"
        android:elevation="@dimen/dimen_8"
        android:text="@string/rech_Payment"
        android:textSize="@dimen/text_20"
        android:textColor="@color/color_white"
        android:background="@color/colorAccent"/>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:orientation="horizontal">

        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnOffer"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/offer"/>
        <Button
            style="?android:attr/buttonBarButtonStyle"
            android:id="@+id/btnHelp"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help"/>

    </LinearLayout>



</LinearLayout>