<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="@dimen/dimen_6"
    android:layout_height="match_parent">

    <RadioGroup
        android:id="@+id/rg_restro_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentLeft="true"
        android:weightSum="1">

    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/radioButton"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_16"
        android:checked="true"
        android:text="Prepaid"
        android:textColor="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatRadioButton
        android:id="@+id/radioButton2"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dimen_50"
        android:layout_marginLeft="@dimen/dimen_16"
        android:checked="false"
        android:text="Postpaid"
        android:textColor="@color/colorPrimary"
        android:layout_height="25dp"
        android:layout_weight="1" />
    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_restro_type"
        android:layout_marginTop="@dimen/dimen_40"
        android:id="@+id/txtInput"
        android:orientation="horizontal">

        <android.support.design.widget.TextInputLayout
        android:layout_width="315dp"
        android:layout_height="wrap_content">

            <EditText
                android:layout_width="315dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/etMob_no"
                android:hint="Mobile Number"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/dimen_0"
            android:src="@drawable/contacts"
            android:id="@+id/ivContacts" />

    </LinearLayout>

    <Spinner
        android:layout_width="@dimen/dimen_20"
        android:layout_height= "@dimen/dimen_12"
        android:id="@+id/idSpinner"
        android:layout_below="@+id/txtInput"
        android:layout_alignParentEnd="true"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtOperator"
        android:layout_below="@+id/txtInput">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etOperator"
            android:hint="Select Operator"
            android:layout_alignParentStart="true" />
    </android.support.design.widget.TextInputLayout>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="Enter Amount"
        android:id="@+id/etAmount"
        android:layout_marginTop="1dp"
        android:layout_below="@+id/txtOperator"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true" />


    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/fastForward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAmount"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="@dimen/dimen_2"
        android:text=">> Fast Forward" />
    <android.support.v7.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rech_Payment"
        android:id="@+id/btn_recharge"
        android:textColor="@color/color_white"
        android:background="@color/colorAccent"
        android:layout_below="@+id/fastForward"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/dimen_20"
        android:elevation="@dimen/dimen_6"
        android:layout_marginLeft="@dimen/dimen_12"
        android:layout_marginRight="@dimen/dimen_12"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />


    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_recharge"
        android:layout_marginTop="@dimen/dimen_20">

        <Button
            android:id="@+id/bt_offer"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/offer"/>
        <Button
            android:id="@+id/bt_help"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="@dimen/dimen_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/help" />

    </LinearLayout>
</RelativeLayout>